# aspira-broker

./: .gitignore  README.md
bench/: benchmark.c
docs/: aspira_v12_trading_architecture.md  broker_grade_trading_system.md  broker_grade_trading_system_v2.md  brokerage_system_architecture_v10_exchange_core.md  brokerage_system_architecture_v9_scheduler.md  brokerage_trading_system_architecture_v7.md  high_performance_trading_system_v4.md  optimization_report.md  trading_system_architecture_v11_distributed_deterministic.md  trading_system_architecture_v6.md  trading_system_v5_architecture.md
scripts/: bench.sh  build.sh  run.sh
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
src/include/: bt_clearing.h  bt_config.h  bt_cpu.h  bt_disruptor.h  bt_event.h  bt_hashmap.h  bt_hugepage.h  bt_journal.h  bt_lockfree_pool.h  bt_lockfree_queue.h  bt_logger.h  bt_matching.h  bt_memory_pool.h  bt_memory_tier.h  bt_numa.h  bt_oms.h  bt_order_book.h  bt_order_gate.h  bt_queues.h  bt_recovery.h  bt_risk.h  bt_scheduler.h  bt_sequencer.h  bt_shard_ipc.h  bt_slab_allocator.h  bt_timer.h  bt_types.h
src/ipc/: shmem.c
src/md/: market_data.c
src/net/: gateway.c
src/persistence/: journal.c
src/utils/: cpu_affinity.c  hugepage.c  logger.c  memory_pool.c  memory_tier.c  numa.c  slab_allocator.c  timer.c
test/: Makefile  test_trading.c
